--- a/src/components/css/product.scss
+++ b/src/components/css/product.scss
@@ -2,8 +2,6 @@
     display: grid;
     grid-template-columns: repeat(6, minmax(0, 1fr));
     border-radius: 10px;
-    border: 1px solid grey;
-    margin: 10px;
 
     @media screen and (max-width: 1500px) {
         grid-template-columns: repeat(5, minmax(0, 1fr));
@@ -21,24 +19,62 @@
 
     @media screen and (max-width: 500px) {
         grid-template-columns: repeat(2, minmax(0, 1fr));
-        // gap: 40px;
         flex-wrap: wrap;
     }
-    @media screen and (max-width: 400px) {
-        grid-template-columns: none;
-    }
 
-    @media screen and (max-width: 300px) {
-        grid-template-columns: repeat(1, minmax(0, 1fr));
-    }
-
-    #product-item {
-        height: 200px;
-        min-width: 150px;
-        // display: flex;
-        background-color: rgb(220, 220, 220);
-        border-radius: 5px;
+    .product-item {
         margin: 5px;
-        // text-wrap: nowrap;
+        padding: 5px;
+        // cursor: pointer;
+        transition: 0.2s all ease-in-out;
+        overflow: hidden;
+        border-radius: 10px;
+        background-color: white;
+
+        .image {
+            height: 200px;
+            border-radius: 10px;
+            background-color: rgba(128, 128, 128, 0.2);
+
+            img {
+                border-radius: 15px;
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        div {
+            position: relative;
+            width: 100%;
+
+            .class-3 {
+                margin: 10px;
+                position: absolute;
+                top: 0;
+                right: 0;
+                display: none;
+                background-color: var(--my-color);
+                // width: 100%;
+                padding: 5px;
+                border-radius: 50vh;
+                transition: 0.2s;
+                cursor: pointer;
+                &:hover {
+                    transition: 0.2s;
+                }
+            }
+        }
+
+
+        &:hover {
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+
+            div {
+                .class-3 {
+                    display: block;
+                }
+            }
+        }
     }
 }
