--- a/src/pages/css/home.scss
+++ b/src/pages/css/home.scss
@@ -1,15 +1,18 @@
 #home-page {
     padding: 20px 10px 0px 10px;
-
+    background: url('../../assets/backgrounds/back-2.jpg');
+    background-attachment: fixed;
+    min-height: 100vh;
 
     .sec1 {
         padding: 20px;
-        // background-color: rgb(104, 138, 187);
         display: flex;
         height: max-content;
-        border: 1px solid grey;
         border-radius: 10px;
-        margin-bottom: 50px;
+        margin-bottom: 10px;
+        background: url('../../assets/backgrounds/back.jpeg');
+        background-position: center;
+        box-shadow: 0px 0px 15px black;
 
         .fad {
             width: 300px;
@@ -18,6 +21,8 @@
         .carroussel {
             width: 600px;
             margin-left: 50px;
+            border-radius: 20px;
+            overflow: hidden;
 
             img {
                 width: 100%;
@@ -26,26 +31,36 @@
         }
     }
 
-    // .sec2 {
-    //     // padding: 20px;
-    // }
+    .sec2 {
+        background-color: rgba(128, 128, 128, 0.1);
+    }
 }
 
 @media screen and (max-width: 700px) {
     #home-page {
-        padding: 0;
+        padding: 20px 10px;
 
         .sec1 {
             display: flex;
             justify-content: center;
-            padding: 0;
+            padding: 10px;
 
             .carroussel {
-                margin: 0;
+                display: none;
             }
 
             .fad {
-                display: none;
+                // background-color: red;
+
+                #fad {
+                    width: 100px;
+                    height: 100px;
+
+                    img {
+                        border-radius: 50px;
+                        object-fit: cover;
+                    }
+                }
             }
         }
     }
