--- a/src/components/css/product.scss
+++ b/src/components/css/product.scss
@@ -23,6 +23,8 @@
     }
 
     .product-item {
+        text-decoration: none;
+        color: black;
         margin: 5px;
         padding: 5px;
         // cursor: pointer;
@@ -44,37 +46,9 @@
             }
         }
 
-        div {
-            position: relative;
-            width: 100%;
-
-            .class-3 {
-                margin: 10px;
-                position: absolute;
-                top: 0;
-                right: 0;
-                display: none;
-                background-color: var(--my-color);
-                // width: 100%;
-                padding: 5px;
-                border-radius: 50vh;
-                transition: 0.2s;
-                cursor: pointer;
-                &:hover {
-                    transition: 0.2s;
-                }
-            }
-        }
-
 
         &:hover {
             box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
-
-            div {
-                .class-3 {
-                    display: block;
-                }
-            }
         }
     }
 }
