--- a/src/pages/css/home.scss
+++ b/src/pages/css/home.scss
@@ -1,6 +1,6 @@
 #home-page {
     padding: 20px 10px 0px 10px;
-    background: url('../../assets/backgrounds/back-2.jpg');
+    // background: url('../../assets/backgrounds/back-2.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -16,10 +16,6 @@
         background: url('../../assets/backgrounds/back.jpeg');
         background-position: center;
         box-shadow: 0px 0px 15px black;
-
-        .fad {
-            width: 300px;
-        }
 
         .carroussel {
             width: 600px;
@@ -52,19 +48,6 @@
                 display: none;
             }
 
-            .fad {
-                // background-color: red;
-
-                #fad {
-                    width: 100px;
-                    height: 100px;
-
-                    img {
-                        border-radius: 50px;
-                        object-fit: cover;
-                    }
-                }
-            }
         }
     }
 }
