--- a/src/global.scss
+++ b/src/global.scss
@@ -2,9 +2,9 @@
 
 
 :root {
-    --primary : white;
+    --primary : rgb(255, 205, 97);
     --primary-2 : rgb(117, 117, 117);
     --font-family : 'roboto';
-    --my-color-2 : rgb(132, 2, 192);
-    --my-color : rgb(31, 1, 70);
+    --my-color-2 : rgb(157, 157, 157);
+    --my-color : rgb(42, 42, 42);
 }
