--- a/src/pages/css/detail.scss
+++ b/src/pages/css/detail.scss
@@ -3,35 +3,52 @@
         display: flex;
         // justify-content: center;
         // align-items: center;
-        // padding-left: 50px;
-        // padding-right: 50px;
+        padding-left: 50px;
+        padding-right: 50px;
         width: 100%;
 
         .col-1 {
+            // border: 2px solid red;
             // background-color: red;
-            display: flex;
-            flex-direction: column;
-            max-width: max-content;
-            width: 100%;
-            padding: 20px;
+            // display: flex;
+            // flex-direction: column;
+            width: max-content;
 
             .image {
-                max-width: 400px;
+                // max-width: 300px;
+                // min-width: 200px;
+                padding: 20px;
                 display: flex;
                 justify-content: center;
+                // background-color: red;
 
                 img {
-                    width: 100%;
+                    width: 300px;
                     border-radius: 20px;
-                    background-color: orange;
+                    // background-color: var(--primary);
                 }
             }
         }
 
         .col-2 {
-            min-width: max-content;
-            // display: flex;
-            background-color: green;
+            flex: 1;
+            width: 100%;
+            // min-width: 500px;
+            border: 2px solid green;
+            border-radius: 20px;
+            padding: 20px;
+        }
+    }
+}
+
+@media screen and (max-width: 700px) {
+    #detail {
+        .l-1 {
+            flex-direction: column;
+
+            .col-1 {
+                width: 100%;
+            }
         }
     }
 }
