--- a/src/pages/css/home.scss
+++ b/src/pages/css/home.scss
@@ -1,5 +1,5 @@
 #home-page {
-    padding: 20px 10px 0px 10px;
+    padding: 0px 10px 0px 10px;
     // background: url('../../assets/backgrounds/back-2.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -9,29 +9,26 @@
 
     .sec1 {
         padding: 20px;
-        display: flex;
+        // display: flex;
         height: max-content;
         border-radius: 10px;
         margin-bottom: 10px;
         background: url('../../assets/backgrounds/back.jpeg');
         background-position: center;
-        box-shadow: 0px 0px 15px black;
+        // box-shadow: 0px 0px 15px black;
 
-        .carroussel {
+        .caroussel {
             width: 600px;
-            margin-left: 50px;
+            // margin-left: 50px;
             border-radius: 20px;
             overflow: hidden;
+            box-shadow: 0px 0px 15px black;
 
             img {
                 width: 100%;
                 height: 100%;
             }
         }
-    }
-
-    .sec2 {
-        background-color: rgba(128, 128, 128, 0.1);
     }
 }
 
@@ -40,14 +37,10 @@
         padding: 20px 10px;
 
         .sec1 {
-            display: flex;
-            justify-content: center;
-            padding: 10px;
-
-            .carroussel {
+            padding: 10px 0px;
+            .caroussel {
                 display: none;
             }
-
         }
     }
 }
