--- a/src/components/css/appBar.scss
+++ b/src/components/css/appBar.scss
@@ -114,7 +114,7 @@
 
             &:hover {
                 transition: 0.2s;
-                box-shadow: 0px 0px 10px white;
+                box-shadow: 0px 0px 20px white;
             }
 
             svg {
@@ -134,21 +134,21 @@
         background-color: var(--my-color-2);
     }
 
-    .l2.sticky {
-        position: fixed;
-        top: 0;
-        left: 0;
-        box-shadow: 0px 0px 15px black;
-    }
 
     .l2 {
         border-top: 2px solid rgb(255, 255, 255, 0.5);
         display: flex;
         background-color: var(--my-color-2);
-        height: 40px;
+        // height: 40px;
         width: 100%;
         z-index: 10;
-        position: sticky;
+
+        &.sticky {
+            position: fixed;
+            top: 0;
+            left: 0;
+            box-shadow: 0px 0px 15px black;
+        }
 
         a {
             width: fit-content;
@@ -195,17 +195,17 @@
                 padding: 0px 5px;
                 text-wrap: nowrap;
                 border: none;
-                outline: 3px solid var(--primary);
+                outline: 3px solid var(--primary-2);
                 color: white;
+                white-space: nowrap;
 
                 &:hover {
                     border: none;
+                    background-color: var(--primary-2);
+                    color: black;
                 }
-
             }
-
         }
-
     }
 }
 
@@ -233,6 +233,16 @@
         .l2-min {
             width: 100%;
             display: flex;
+        }
+
+        .l2 {
+            height: 32px;
+
+            .category-list {
+                &::-webkit-scrollbar {
+                    display: none;
+                }
+            }
         }
     }
 
@@ -269,6 +279,7 @@ select:focus {
     box-shadow: 0 0 5px grey;
     border: 1px solid rgba(128, 128, 128, 0.5);
 }
+
 
 
 ::-webkit-scrollbar {
