--- a/src/components/css/filter.scss
+++ b/src/components/css/filter.scss
@@ -3,11 +3,8 @@
     border-radius: 10px;
     padding: 10px;
     position: sticky;
-    top: 0;
-    margin-top: 40px;
-    max-width: 200px;
-    // min-height: 200px;
-    width: max-content;
+    top: 50px;
+    max-width: min-content;
     height: max-content;
 
     @media screen and (max-width: 700px) {
@@ -15,8 +12,8 @@
     }
 
     .filter-list {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        display: flex;
+        justify-content: space-between;
         flex-wrap: wrap;
 
         .filter-item {
@@ -25,6 +22,7 @@
             margin: 5px;
             padding: 0px 5px 0px 5px;
             border-radius: 5px;
+            white-space: nowrap;
         }
     }
 }
