--- a/src/components/css/itemHorizontalList.scss
+++ b/src/components/css/itemHorizontalList.scss
@@ -1,40 +1,61 @@
-.horizontalItems {
-    width: 100%;
-    // background-color: red;
-    // box-shadow: 0px 0px 10px black;
+#horizontalItems {
     display: flex;
-    overflow-x: scroll;
+    align-items: center;
+    background-color: rgba(150, 150, 150, 0.1);
 
-    .category {
-        height: 80px;
-        min-width: 80px;
-        max-width: 80px;
-        margin: 5px 15px;
-        border-radius: 50%;
-        background-color: var(--primary);
-        overflow: hidden;
+    @media screen and (max-width: 700px) {
+        margin: 0 10px;
+    }
+
+    .icon {
+        align-self: 'center';
+        cursor: pointer;
+        @media screen and (max-width : 700px){
+            display: none;
+        }
+    }
+
+    .slider {
+        width: 100%;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        overflow-x: scroll;
+        scroll-behavior: smooth;
 
-        transition: 0.05s;
-
-        &:hover {
-            box-shadow: 0px 0px 10px rgb(0, 0, 0);
-
-            img {
-                transition: 0.05s;
-                object-fit: cover;
-                background-position: center;
-                width: 110%;
-                height: 110%;
-            }
+        &::-webkit-scrollbar {
+            display: none;
         }
 
-        img {
-            object-fit: cover;
-            width: 100%;
-            height: 100%;
+        .category {
+            height: 80px;
+            min-width: 80px;
+            max-width: 80px;
+            margin: 5px 15px;
+            border-radius: 50%;
+            background-color: var(--primary);
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            transition: 0.05s;
+
+            &:hover {
+                box-shadow: 0px 0px 10px rgb(0, 0, 0);
+
+                img {
+                    transition: 0.05s;
+                    object-fit: cover;
+                    background-position: center;
+                    width: 110%;
+                    height: 110%;
+                }
+            }
+
+            img {
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+            }
         }
     }
 }
