--- a/src/components/css/itemHorizontalList.scss
+++ b/src/components/css/itemHorizontalList.scss
@@ -29,7 +29,7 @@
             min-width: 80px;
             max-width: 80px;
             margin: 5px 15px;
-            border-radius: 50%;
+            // border-radius: 50%;
             background-color: var(--primary);
             overflow: hidden;
             display: flex;
