--- a/src/components/css/appBar.scss
+++ b/src/components/css/appBar.scss
@@ -1,6 +1,14 @@
 #app-bar {
     z-index: 100;
-    box-shadow: 0px 0px 5px grey;
+    box-shadow: 10px 10px 15px rgb(255, 255, 255);
+
+    
+    /* Safari */
+    -webkit-user-select: none;
+    /* IE 10 and IE 11 */
+    -ms-user-select: none;
+    /* Standard syntax */
+    user-select: none;
 
     a {
         text-decoration: none;
