--- a/src/components/css/button.scss
+++ b/src/components/css/button.scss
@@ -10,6 +10,14 @@
     color: white;
     padding: 0px 20px 0px 20px;
 
+    
+    /* Safari */
+    -webkit-user-select: none;
+    /* IE 10 and IE 11 */
+    -ms-user-select: none;
+    /* Standard syntax */
+    user-select: none;
+
     &:hover {
         transition: 0.2s;
         box-shadow: 0px 0px 10px grey;
