--- a/src/components/css/filter.scss
+++ b/src/components/css/filter.scss
@@ -1,5 +1,6 @@
-.items-filter {
+#items-filter {
     border: 1px solid grey;
+    color: black;
     border-radius: 10px;
     padding: 10px;
     position: sticky;
@@ -16,6 +17,14 @@
         justify-content: space-between;
         flex-wrap: wrap;
 
+
+        /* Safari */
+        -webkit-user-select: none;
+        /* IE 10 and IE 11 */
+        -ms-user-select: none;
+        /* Standard syntax */
+        user-select: none;
+
         .filter-item {
             text-wrap: nowrap;
             border: 1px solid grey;
@@ -23,6 +32,10 @@
             padding: 0px 5px 0px 5px;
             border-radius: 5px;
             white-space: nowrap;
+            cursor: pointer;
+            input {
+                cursor: pointer;
+            }
         }
     }
 }
