--- a/src/pages/css/detail.scss
+++ b/src/pages/css/detail.scss
@@ -1,22 +1,19 @@
 #detail {
+    margin-top: 20px;
     .l-1 {
         display: flex;
-        // justify-content: center;
-        // align-items: center;
+        flex-wrap: wrap;
         padding-left: 50px;
         padding-right: 50px;
         width: 100%;
 
         .col-1 {
-            // border: 2px solid red;
-            // background-color: red;
+            border: 2px solid red;
             // display: flex;
             // flex-direction: column;
             width: max-content;
 
             .image {
-                // max-width: 300px;
-                // min-width: 200px;
                 padding: 20px;
                 display: flex;
                 justify-content: center;
@@ -33,7 +30,7 @@
         .col-2 {
             flex: 1;
             width: 100%;
-            // min-width: 500px;
+            min-width: 500px;
             border: 2px solid green;
             border-radius: 20px;
             padding: 20px;
@@ -41,13 +38,18 @@
     }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 950px) {
     #detail {
         .l-1 {
             flex-direction: column;
+            padding-left: 20px;
+            padding-right: 2%;
 
             .col-1 {
                 width: 100%;
+            }
+            .col-2 {
+                min-width: 100%;
             }
         }
     }
