--- a/src/App.scss
+++ b/src/App.scss
@@ -1,17 +1,17 @@
 @import '../src/global.scss';
 
-*{
+* {
   font-family: var(--font-family);
   padding: 0;
   margin: 0;
 
   img {
-    
-    /* Safari */
     -webkit-user-select: none;
-    /* IE 10 and IE 11 */
     -ms-user-select: none;
-    /* Standard syntax */
     user-select: none;
+  }
+
+  .page {
+    padding: 10px 10px 0px 10px;
   }
 }
