--- a/src/components/css/filter.scss
+++ b/src/components/css/filter.scss
@@ -6,6 +6,7 @@
     position: sticky;
     top: 50px;
     max-width: min-content;
+    // max-width: 200px;
     height: max-content;
 
     @media screen and (max-width: 700px) {
