--- a/src/global.scss
+++ b/src/global.scss
@@ -2,10 +2,13 @@
 
 
 :root {
-    --primary : rgb(255, 205, 97);
+    --primary : rgb(255, 217, 0);
+    // --primary : rgb(255, 205, 97);
     --primary-2 : rgb(255, 215, 130);
     --font-family : 'roboto';
     --my-color-2 : rgb(50, 48, 48);
     --my-color : rgb(0, 0, 0);
     --minimal-size : 700px;
+    --text-color-white : white;
+    --text-color-black : black;
 }
