--- a/src/components/css/button.scss
+++ b/src/components/css/button.scss
@@ -1,7 +1,8 @@
 .myButton {
     background: var(--primary);
     text-decoration: none;
-    font-size: 25px;
+    // font-size: 25px;
+    font-size: 3.5vmin;
     border-radius: 50px;
     display: flex;
     justify-content: center;
@@ -11,11 +12,8 @@
     padding: 0px 20px 0px 20px;
 
     
-    /* Safari */
     -webkit-user-select: none;
-    /* IE 10 and IE 11 */
     -ms-user-select: none;
-    /* Standard syntax */
     user-select: none;
 
     &:hover {
