--- a/src/pages/css/detail.scss
+++ b/src/pages/css/detail.scss
@@ -5,16 +5,24 @@
         flex-wrap: wrap;
         padding-left: 50px;
         padding-right: 50px;
+        // background-color: red;
+        margin-bottom: 70px;
         width: 100%;
 
         .col-1 {
-            border: 2px solid red;
-            // display: flex;
-            // flex-direction: column;
+            // border: 2px solid red;
+            border-radius: 20px;
             width: max-content;
 
+            @media screen and (max-width : 950px) {
+                display: flex;
+            }
+            @media screen and (max-width : 650px) {
+                display: block;
+            }
+
             .image {
-                padding: 20px;
+                padding-top: 20px;
                 display: flex;
                 justify-content: center;
                 // background-color: red;
@@ -22,18 +30,34 @@
                 img {
                     width: 300px;
                     border-radius: 20px;
-                    // background-color: var(--primary);
                 }
+            }
+
+            .icon {
+                border-radius: 50%;
+                border: 1px solid rgb(213, 215, 216);
+                &:hover{
+                    background-color: rgb(243, 243, 243);;
+                }
+            }
+
+            .myButton {
+                max-width: max-content;
+            }
+
+            .title {
+                max-width: 500px;
             }
         }
 
         .col-2 {
             flex: 1;
-            width: 100%;
+            // width: 100;
             min-width: 500px;
-            border: 2px solid green;
+            border: 2px solid grey;
             border-radius: 20px;
             padding: 20px;
+            margin: 20px;
         }
     }
 }
@@ -42,13 +66,16 @@
     #detail {
         .l-1 {
             flex-direction: column;
-            padding-left: 20px;
-            padding-right: 2%;
+            padding-left: 0px;
+            padding-right: 0px;
 
             .col-1 {
                 width: 100%;
+                padding: 0;
+                // display: flex;
             }
             .col-2 {
+                // margin-top: 20px;
                 min-width: 100%;
             }
         }
