--- a/src/pages/css/home.scss
+++ b/src/pages/css/home.scss
@@ -1,5 +1,4 @@
 #home-page {
-    padding: 10px 10px 0px 10px;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -23,7 +22,8 @@
 
 @media screen and (max-width: 700px) {
     #home-page {
-        padding: 0px;
+        padding-left: 0px;
+        padding-right: 0px;
 
         .sec1 {
             padding: 10px 0px;
