--- a/src/App.scss
+++ b/src/App.scss
@@ -14,5 +14,9 @@
   .page {
     padding: 10px 10px 0px 10px;
     min-height: 100vh;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // flex-direction: column;
   }
 }
