--- a/src/components/css/baniere.scss
+++ b/src/components/css/baniere.scss
@@ -1,7 +1,6 @@
 .caroussel {
     width: 100%;
     height: 100%;
-    border-radius: 0px 0px 5px 5px;
     overflow: hidden;
 
 
@@ -14,5 +13,6 @@
         max-height: 300px;
         height: 50vh;
         object-fit: cover;
+        border-radius: 10px;
     }
 }
