--- a/src/components/css/appBar.scss
+++ b/src/components/css/appBar.scss
@@ -18,7 +18,7 @@
 
         select {
             background-color: var(--primary);
-            color: white;
+            color: black;
             border-radius: 5px 0px 0px 5px;
             border: none;
             padding-left: 10px;
@@ -40,7 +40,7 @@
 
             svg {
                 * {
-                    color: white;
+                    color: black;
                 }
             }
 
@@ -166,11 +166,19 @@
         }
 
         .category-list {
+            width: 100%;
+            height: 45px;
+            overflow: hidden;
 
-            display: flex;
-            align-items: center;
-            overflow-y: hidden;
-            width: fit-content;
+            .icon {
+                display: none;
+            }
+
+            div {
+                display: flex;
+                align-items: center;
+                overflow-y: hidden;
+            }
 
 
             .active {
@@ -182,8 +190,6 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                width: max-content;
-                height: max-content;
                 margin: 5px;
                 border-radius: 10px;
                 padding: 0px 5px;
@@ -223,13 +229,19 @@
 
         .l2 {
             .category-list {
-                &::-webkit-scrollbar {
-                    display: none;
+                div {
+
+                    &::-webkit-scrollbar {
+                        display: none;
+                    }
+                }
+
+                .icon {
+                    display: block;
                 }
             }
         }
     }
-
 }
 
 input[type="text"],
