--- a/src/components/css/itemHorizontalList.scss
+++ b/src/components/css/itemHorizontalList.scss
@@ -1,21 +1,27 @@
 #horizontalItems {
     display: flex;
     align-items: center;
+    height: 100px;
 
     @media screen and (max-width: 700px) {
         margin: 0 10px;
     }
 
     .icon {
-        align-self: 'center';
         cursor: pointer;
-        @media screen and (max-width : 700px){
+
+        &:hover {
+            outline: 1px solid rgb(213, 215, 216);
+            background-color: rgb(243, 243, 243);
+        }
+
+        @media screen and (max-width : 700px) {
             display: none;
         }
     }
 
     .slider {
-        width: 100%;
+        height: 100%;
         display: flex;
         overflow-x: scroll;
         scroll-behavior: smooth;
@@ -27,14 +33,13 @@
         .category {
             height: 80px;
             min-width: 80px;
-            max-width: 80px;
+            width: 80px;
             margin: 5px 15px;
             background-color: var(--primary);
             overflow: hidden;
             display: flex;
             justify-content: center;
             align-items: center;
-
             transition: 0.05s;
 
             &:hover {
