--- a/src/pages/css/detail.scss
+++ b/src/pages/css/detail.scss
@@ -1,5 +1,6 @@
 #detail {
     margin-top: 20px;
+
     .l-1 {
         display: flex;
         flex-wrap: wrap;
@@ -15,6 +16,7 @@
             @media screen and (max-width : 950px) {
                 display: flex;
             }
+
             @media screen and (max-width : 650px) {
                 display: block;
             }
@@ -33,8 +35,9 @@
             .icon {
                 border-radius: 50%;
                 border: 1px solid rgb(213, 215, 216);
-                &:hover{
-                    background-color: rgb(243, 243, 243);;
+
+                &:hover {
+                    background-color: rgb(243, 243, 243);
                 }
             }
 
@@ -69,6 +72,7 @@
                 width: 100%;
                 padding: 0;
             }
+
             .col-2 {
                 min-width: 100%;
             }
