--- a/src/components/css/appBar.scss
+++ b/src/components/css/appBar.scss
@@ -167,18 +167,9 @@
 
         .category-list {
             width: 100%;
-            height: 45px;
-            overflow: hidden;
-
-            .icon {
-                display: none;
-            }
-
-            div {
-                display: flex;
-                align-items: center;
-                overflow-y: hidden;
-            }
+            overflow-y: hidden;
+            display: flex;
+            align-items: center;
 
 
             .active {
@@ -229,15 +220,15 @@
 
         .l2 {
             .category-list {
-                div {
+                // div {
 
-                    &::-webkit-scrollbar {
-                        display: none;
-                    }
-                }
+                //     &::-webkit-scrollbar {
+                //         display: none;
+                //     }
+                // }
 
                 .icon {
-                    display: block;
+                    display: none;
                 }
             }
         }
@@ -278,22 +269,22 @@ select:focus {
 
 
 
-::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-}
+// ::-webkit-scrollbar {
+//     width: 10px;
+//     height: 10px;
+// }
 
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    background-color: white;
-    border-radius: 10px;
-}
+// ::-webkit-scrollbar-track {
+//     box-shadow: inset 0 0 5px grey;
+//     background-color: white;
+//     border-radius: 10px;
+// }
 
-::-webkit-scrollbar-thumb {
-    background: rgb(210, 210, 210);
-    border-radius: 10px;
-}
+// ::-webkit-scrollbar-thumb {
+//     background: rgb(210, 210, 210);
+//     border-radius: 10px;
+// }
 
-::-webkit-scrollbar-thumb:hover {
-    background: rgb(61, 61, 61);
-}
+// ::-webkit-scrollbar-thumb:hover {
+//     background: rgb(61, 61, 61);
+// }
