--- a/src/components/css/itemHorizontalList.scss
+++ b/src/components/css/itemHorizontalList.scss
@@ -9,6 +9,7 @@
 
     .icon {
         cursor: pointer;
+        display: flex;
 
         &:hover {
             outline: 1px solid rgb(213, 215, 216);
