--- a/src/components/css/product.scss
+++ b/src/components/css/product.scss
@@ -31,6 +31,7 @@
         overflow: hidden;
         border-radius: 10px;
         background-color: white;
+        height: max-content;
 
         .image {
             height: 200px;
@@ -43,7 +44,6 @@
                 height: 100%;
             }
         }
-
 
         &:hover {
             box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
