--- a/src/components/css/scrollUp.scss
+++ b/src/components/css/scrollUp.scss
@@ -26,7 +26,7 @@
     height: 10px;
     width: 10px;
     transform: translate(-50%, -0%) rotate(45deg);
-    border: 2px solid black;
+    border: 2px solid white;
     border-bottom: transparent;
     border-right: transparent;
     animation: scroll-up .9s ease-out infinite;
