--- a/src/components/css/product.scss
+++ b/src/components/css/product.scss
@@ -1,4 +1,4 @@
-#produts {
+.display-products {
     display: grid;
     grid-template-columns: repeat(6, minmax(0, 1fr));
     border-radius: 10px;
