--- a/src/components/css/button.scss
+++ b/src/components/css/button.scss
@@ -16,6 +16,8 @@
         transition: 0.2s;
         box-shadow: 0px 0px 10px grey;
     }
+    box-shadow: 0px 0px 5px grey;
+
 
     .icon {
         margin-left: 5px;
@@ -30,6 +32,6 @@
 
 @media screen and (max-width: 800px) {
     .myButton {
-        font-size: 30px;
+        font-size: 25px;
     }
 }
